Language Server: Part 4